fixed main wrapper overflow issue

--- a/src/Components/Containers/Wrapper/Wrapper.scss
+++ b/src/Components/Containers/Wrapper/Wrapper.scss
@@ -15,6 +15,11 @@
 
   margin: 0 auto;
   min-height: 100%;
+  border: 1px solid red;
+}
+
+.main-wrapper:last-of-type {
+  height: fit-content;
 }
 
 .cartModal-wrapper {
